--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "style-loader": "3.3.1",
+    "theme-color-switch": "1.3.0",
+    "theme-color-webpack-plugin": "2.0.0",
     "tsx-control-statements": "2.16.5",
     "typescript": "4.6.4",
     "url": "0.11.0",
