--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-onclickoutside": "6.12.1",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
+    "react-toastify": "9.0.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "style-loader": "3.3.1",
