--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@ant-design/icons": "4.7.0",
     "@metamask/detect-provider": "1.2.0",
     "@nextcloud/event-bus": "2.1.1",
+    "@types/async-lock": "1.1.5",
     "@types/history": "4.7.11",
+    "@types/js-cookie": "3.0.2",
     "@types/lodash": "4.14.182",
     "@types/pubsub-js": "1.8.3",
     "@types/react": "17.0.45",
@@ -50,6 +52,7 @@
     "@types/uuid": "8.3.4",
     "antd": "4.20.5",
     "assert": "2.0.0",
+    "async-lock": "1.3.1",
     "axios": "0.27.2",
     "babel-config-pandora": "1.1.0",
     "bignumber.js": "9.0.2",
@@ -76,12 +79,14 @@
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
     "i18next": "19.5.1",
+    "js-cookie": "3.0.1",
     "less": "4.1.2",
     "less-loader": "11.0.0",
     "less-plugin-autoprefix": "2.0.0",
     "lint-staged": "10.5.4",
     "lodash": "4.17.21",
     "mini-css-extract-plugin": "2.6.0",
+    "mitt": "3.0.0",
     "mobx": "4.15.4",
     "mobx-react": "6.2.2",
     "mobx-react-lite": "2.0.7",
@@ -100,6 +105,7 @@
     "react-onclickoutside": "6.12.1",
     "react-router": "5.2.1",
     "react-router-dom": "5.3.0",
+    "rss3": "0.8.19",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "style-loader": "3.3.1",
